package modele;

public enum StatutReservation {
    ACTIVE,
    ANNULEE
}
